1. Increased line height to avoid overlap of hit area when clicking info button.

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -285,7 +285,8 @@ td.errors textarea {
 
 table.nested td, table.nested th {
     font: 11px verdana, arial, helvetica, sans-serif;
-    line-height: 16px;
+/*    line-height: 16px;*/
+    line-height: 32px;
     padding: 0px;
     text-align: left;
     vertical-align: top;
